Add Toshiaki Makita <makita.toshiaki@lab.ntt.co.jp> to people.org
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/people.org
+++ b/people.org
@@ -67,6 +67,8 @@ David Ahern (fib lookup helper)
 
 PJ (still waiting for data_meta work)
 
+Toshiaki Makita <makita.toshiaki@lab.ntt.co.jp> (veth)
+
 ** eBPF maintainers
 
 Daniel and Alexei
