Conf LPC: make topics org-mod headers
Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/LinuxPlumbers2018/presentation_notes.org
+++ b/conference/LinuxPlumbers2018/presentation_notes.org
@@ -133,7 +133,7 @@ own that to get feedback.
 
 ** Topics (also need to covering other talks):
 
- - Topic: Zero-copy to userspace AF_XDP
+*** Topic: Zero-copy to userspace AF_XDP
 
    Ref two AF_XDP Talks.
 
@@ -146,9 +146,9 @@ own that to get feedback.
    facility.  Want to avoid the all-or-nothing proposition like we
    have seen with DPDK.
 
- - Topic: Usability: User Experience and Debugging
+*** Topic: Usability: User Experience and Debugging
 
- - Topic: (Usability related) Driver Support
+*** Topic: (Usability related) Driver Support
 
    Issue that not all drivers support all features, but userspace
    cannot query what a given driver supports.  If a driver
@@ -157,7 +157,7 @@ own that to get feedback.
    afterwards packets are silently dropped (can be debugged via
    tracepoints).
 
- - Topic: Move SKB allocation out of driver
+*** Topic: Move SKB allocation out of driver
 
    The long term goal is moving SKB allocations out of driver code.
    This is already done for CPU-map and redirects into tun-driver.
@@ -168,9 +168,9 @@ own that to get feedback.
    way.  This depends/waits on metadata talk, for this to be generic
    enough.
 
- - Topic: QoS and Rate Transitions
+*** Topic: QoS and Rate Transitions
 
- - Topic: Accelerating Transport Protocols
+*** Topic: Accelerating Transport Protocols
 
    E.g. it should be possible to do delivery into TCP sockets, and
    hand-over the packet-page (without first allocating an SKB).
@@ -180,17 +180,21 @@ own that to get feedback.
  - Topic: Decouple XDP_REDIRECT from ndo_xdp_xmit
 
 
- - Topic (maybe skip): eBPF verifier
+*** Topic (maybe skip): eBPF verifier
 
    All the discussions about extending the eBPF verifier, should be
    move to the eBPF-mini-conf.
 
- - Topic (maybe skip): XDP as a building block
+*** Topic (maybe skip): XDP as a building block
 
    If it is not clear to people, explain that XDP is core kernel
    facility, that other Open Source projects need to pickup, use and
    innovate on-top of.
 
+*** Topic: NIC memory models and DMA mapping
+
+
+*** Topic: ARM and XDP support
 
 
 ** Slide: What is XDP
