--- a/conference/LinuxPlumbers2018/presentation_notes.org
+++ b/conference/LinuxPlumbers2018/presentation_notes.org
@@ -1,7 +1,8 @@
+# -*- fill-column: 79; -*-
 #+TITLE: Notes for netdev-track at LinuxPlumbers 2018
 
-Trying to organize and structure the presentation for Linux Plumbers
-Conference 2018 Networking Track.
+Trying to organize and structure the presentation for Linux Plumbers Conference
+2018 Networking Track.
 
  http://vger.kernel.org/lpc-networking.html
 
@@ -105,29 +106,27 @@ PHYlink and SFP: Going beyond 1G Copper PHYs
 
 *IDEA* for organizing presentation:
 
-The presentation will be organized around a number of XDP-topics.  We
-cannot bring-up all topics, but have selected some.  To introduce
-other talks, their topics have to be included. Also have some of our
-own that to get feedback.
+The presentation will be organized around a number of XDP-topics.  We cannot
+bring-up all topics, but have selected some.  To introduce other talks, their
+topics have to be included. Also have some of our own that to get feedback.
 
 ** Topic: Zero-copy to userspace AF_XDP
 
    Ref two AF_XDP Talks.
 
-   Pitch: XDP have been focused on keeping packet handling and
-   processing in kernel space, via leveraging eBPF.  To avoid the
-   overhead of syscalls, context switch and packet copies.
+   Pitch: XDP have been focused on keeping packet handling and processing in
+   kernel space, via leveraging eBPF.  To avoid the overhead of syscalls,
+   context switch and packet copies.
 
-   AF_XDP is about moving packet handling into userspace.  The key
-   point for integrating this with XDP redirect is flexibility.  We
-   want to avoid NIC hardware being taken over by the zero-copy
-   facility.  Want to avoid the all-or-nothing proposition like we
-   have seen with DPDK.
+   AF_XDP is about moving packet handling into userspace.  The key point for
+   integrating this with XDP redirect is flexibility.  We want to avoid NIC
+   hardware being taken over by the zero-copy facility.  Want to avoid the
+   all-or-nothing proposition like we have seen with DPDK.
 
-   AF_XDP avoids the overhead by establishing SPSC queues as
-   communication channels to userspace.  The copy is avoided by
-   userspace alloacting and gifting/providing kernel with this memory,
-   which is used directly for RX DMA delivery.
+   AF_XDP avoids the overhead by establishing SPSC queues as communication
+   channels to userspace.  The copy is avoided by userspace alloacting and
+   gifting/providing kernel with this memory, which is used directly for RX
+   DMA delivery.
 
    The AF_XDP socket is woken-up like a regular socket, but for
    high-performance userspace can poll the socket.
@@ -139,11 +138,10 @@ own that to get feedback.
 
 ** Topic: (Usability related) Driver Support
 
-   Issue that not all drivers support all features, but userspace
-   cannot query what a given driver supports.  If a driver
-   e.g. doesn't support XDP_REDIRECT, then it can only be detected
-   "runtime" by observing a WARN_ONCE kernel log message and
-   afterwards packets are silently dropped (can be debugged via
+   Issue that not all drivers support all features, but userspace cannot query
+   what a given driver supports.  If a driver e.g. doesn't support XDP_REDIRECT,
+   then it can only be detected "runtime" by observing a WARN_ONCE kernel log
+   message and afterwards packets are silently dropped (can be debugged via
    tracepoints).
 
    The issue was seen with Suricata, and they want some kind of way to
@@ -152,34 +150,34 @@ own that to get feedback.
 
 ** Topic: (Usability related) XDP_REDIRECT entangled with ndo_xdp_xmit.
 
+   Decouple XDP_REDIRECT from ndo_xdp_xmit.
    This mostly technical, but also related to usability.
 
-   Upstream sees XDP_REDIRECT driver support related to also
-   supporting ndo_xdp_xmit.  IHMO these two functions are actually
-   separate.  The XDP_REDIRECT action can be used completely without
-   ndo_xdp_xmit, e.g for CPU-map redirect.
+   Upstream sees XDP_REDIRECT driver support related to also supporting
+   ndo_xdp_xmit.  IHMO these two functions are actually separate.  The
+   XDP_REDIRECT action can be used completely without ndo_xdp_xmit, e.g for
+   CPU-map redirect.
 
-   The problem of enabling ndo_xdp_xmit on a driver is the HW
-   resources it consumes, and the user might not even need the
-   feature.  XDP-core assumes NIC driver allocates one dedicated
-   TX-queue per CPU core in the system.  This is wasting HW resources,
-   and might not even be possible on systems with many CPU cores.
+   The problem of enabling ndo_xdp_xmit on a driver is the HW resources it
+   consumes, and the user might not even need the feature.  XDP-core assumes
+   NIC driver allocates one dedicated TX-queue per CPU core in the system.
+   This is wasting HW resources, and might not even be possible on systems with
+   many CPU cores.
 
-   E.g. it was discovered the ixgbe cannot be used on systems with
-   more than 96 CPU cores.
+   E.g. it was discovered the ixgbe cannot be used on systems with more than 96
+   CPU cores.
 
 ** Topic: Move SKB allocation out of driver
 
    The long term goal is moving SKB allocations out of driver code.
 
-   This is already supported by all drivers implementing XDP_REDIRECT,
-   as CPU-map and redirects into tun-driver, create the SKB later
-   based on the xdp_frame.  Working towards generalizing this.
+   This is already supported by all drivers implementing XDP_REDIRECT, as
+   CPU-map and redirects into tun-driver, create the SKB later based on the
+   xdp_frame.  Working towards generalizing this.
 
    Missing part are howto transfer the different driver offloads
-   (e.g. csum-info, rxhash, HW-mark) in a vendor neutral and generic
-   way.  This depends/waits on metadata talk, for this to be generic
-   enough.
+   (e.g. csum-info, rxhash, HW-mark) in a vendor neutral and generic way.  This
+   depends/waits on metadata talk, for this to be generic enough.
 
 ** Topic: QoS and Rate Transitions
 
@@ -188,10 +186,8 @@ own that to get feedback.
    E.g. it should be possible to do delivery into TCP sockets, and
    hand-over the packet-page (without first allocating an SKB).
 
-   Talk: "Building socket-aware BPF programs" is part of this work.
-
- - Topic: Decouple XDP_REDIRECT from ndo_xdp_xmit
-
+   Ref-Talk: "Building socket-aware BPF programs" is part of this
+   work.
 
 ** Topic (maybe skip): eBPF verifier
 
@@ -206,50 +202,54 @@ own that to get feedback.
 
 ** Topic: NIC memory models and DMA mapping
 
+   Does Bulk xdp_frame_return fit here?
+
 ** Topic: ARM and XDP support
 
 
 
 * Slides
 
-** Story baseline
+** (Story baseline) Slide: XDP-paper
 
  - Introduce XDP-paper.
 
-   We wrote XDP-paper, that doc XDP architecture, and do head-to-head
-   comparison against DPDK.
+   We wrote XDP-paper, that doc XDP architecture, and do head-to-head comparison
+   against DPDK.
 
  - This talk is focused on "Limitation and Future Work".
 
-   We are fortunate that other people have already started to work on
-   "future work" items, and are even being covered and presented at
-   this conf.  We will mention these areas and defer the details and
-   discussion to these talks.
+   We are fortunate that other people have already started to work on "future
+   work" items, and are even being covered and presented at this conf.  We will
+   mention these areas and defer the details and discussion to these talks.
 
  - Purpose soliciting feedback and ideas from the community
 
-   Besides referencing the topics covered in other talks, we have also
-   selected some XDP topics that we wish to soliciting feedback om
-   from this community.
+   Besides referencing the topics covered in other talks, we have also selected
+   some XDP topics that we wish to soliciting feedback om from this community.
 
 ** Slide: What is XDP
 
 Frame what is XDP.
 
-Keep it very short, if possible 1-slide.  This is mostly for people
-finding this slide deck, or LPC people that don't know that XDP is.
-
 Be inspirational: New programmable layer in network stack
 
+Keep it very short, if possible 1-slide.  This is mostly for people finding this
+slide deck, or LPC people that don't know that XDP is.
+
 ** Slide: Production use-cases
+
+
 
 Have seen real prod use-cases
 
 Mention: 2x facebook talks
 
+Mention: CloudFlare publically say they use XDP
+
 
 ** Slide: New XDP features and performance requirement
 
-Slide with guideing principle: Adding features must not negativly
-affect baseline XDP performance.  Use optimization technique of moving
-runtime checks to setup time checks.
+Slide with guideing principle: Adding features must not negativly affect
+baseline XDP performance.  Use optimization technique of moving runtime checks
+to setup time checks.
