--- a/conference/LinuxPlumbers2018/presentation_notes.org
+++ b/conference/LinuxPlumbers2018/presentation_notes.org
@@ -104,13 +104,38 @@ TC SW datapath: a performance analysis
 PHYlink and SFP: Going beyond 1G Copper PHYs
 
 
-* Topics (also need to covering other talks)
+* Topics and slides
 
 *IDEA* for organizing presentation:
 
 The presentation will be organized around a number of XDP-topics.  We cannot
 bring-up all topics, but have selected some.  To introduce other talks, their
 topics have to be included. Also have some of our own that to get feedback.
+
+The "Topic:" notation will be transition slide, and the "Slide:" notation will
+be actual slides.  The "Topic:" notes describe more about the topic, this text
+could be used on the paper.
+
+
+** (Story baseline) Slide: XDP-paper
+
+ - Introduce XDP-paper.
+
+   We wrote XDP-paper, that doc XDP architecture, and do head-to-head comparison
+   against DPDK.
+
+   Conf: ACM CoNEXT 2018 Greece
+
+ - This talk is focused on "Limitation and Future Work".
+
+   We are fortunate that other people have already started to work on "future
+   work" items, and are even being covered and presented at this conf.  We will
+   mention these areas and defer the details and discussion to these talks.
+
+ - Purpose soliciting feedback and ideas from the community
+
+   Besides referencing the topics covered in other talks, we have also selected
+   some XDP topics that we wish to soliciting feedback om from this community.
 
 ** Topic: Zero-copy to userspace AF_XDP
 
@@ -207,30 +232,6 @@ topics have to be included. Also have some of our own that to get feedback.
    Does Bulk xdp_frame_return fit here?
 
 ** Topic: ARM and XDP support
-
-
-
-* Slides
-
-** (Story baseline) Slide: XDP-paper
-
- - Introduce XDP-paper.
-
-   We wrote XDP-paper, that doc XDP architecture, and do head-to-head comparison
-   against DPDK.
-
-   Conf: ACM CoNEXT 2018 Greece
-
- - This talk is focused on "Limitation and Future Work".
-
-   We are fortunate that other people have already started to work on "future
-   work" items, and are even being covered and presented at this conf.  We will
-   mention these areas and defer the details and discussion to these talks.
-
- - Purpose soliciting feedback and ideas from the community
-
-   Besides referencing the topics covered in other talks, we have also selected
-   some XDP topics that we wish to soliciting feedback om from this community.
 
 ** Slide: What is XDP
 
